# PDF-Query-Engine

./: .gitignore  README.MD  pyproject.toml  requirements.txt
src/: config.py  main.py
